tests/ui/anyiter_paren.stderr
error: expected `,`
 --> tests/ui/anyiter_paren.rs:4:30
  |
4 | pub fn any_str_len(s: AnyIter(AnyString)) -> usize {
  |                              ^
